# PrivChain

./: .env.example  .gitignore  README.md  docker-compose.yml
auth/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
auth/docker/api-entrypoint-scripts/: docker-entrypoint.sh
auth/src/: conftest.py  main.py
auth/src/auth/: exceptions.py  services.py
auth/src/auth/tests/: test_authentication.py
auth/src/auth/v1/: routes.py
auth/src/besu/: models.py  schemas.py  services.py
auth/src/besu/test/: README.md  conftest.py  test_services.py
auth/src/besu/v1/: routes.py
auth/src/config/: .env.example  db_health_check.py
auth/src/config/database/: setup.py
auth/src/config/database/migrations/: env.py
auth/src/config/database/migrations/versions/: 2025_08_12-19_31-07da072ec622-first_migration.py
auth/src/config/web3/: setup.py
auth/src/core/: api.py  exceptions.py  models.py
auth/src/core/middlewares/: authentication_middleware.py  email_validator.py  password_validator.py
auth/src/core/repositories/: __init__.py
auth/src/core/repositories/users/: __init__.py  user_base_repository.py  user_sqlalquemy_repository.py
auth/src/core/repositories/users/tests/: test_user_sqlalquemy_repository.py
auth/src/core/scripts/: create_admin.py  db.py  get_token.py
auth/src/misc/: sign_transaction.py  signed_transaction_api.json
auth/src/users/: schemas.py  service.py
auth/src/users/tests/: test_create_user.py  test_get_user.py  test_update_user.py
auth/src/users/v1/: routes.py
implementacao/: README.md
(+54 files in other folders)
