[project]
name = "auth"
version = "0.1.0"
description = "Backend to authenticate Besu user with JWT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.1",
    "greenlet>=3.2.4",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "python-dotenv>=1.1.1",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.43",
    "sqlmodel>=0.0.24",
    "web3>=7.13.0",
    "py-solc-x>=2.0.0",
]
